# erpnext-receipt-scanner

./: .gitignore  README.md  license.txt  pyproject.toml  requirements.txt
invoice2erpnext/: __init__.py  hooks.py  utils.py
invoice2erpnext/invoice2erpnext/doctype/invoice2erpnext_currency_account/: invoice2erpnext_currency_account.json  invoice2erpnext_currency_account.py
invoice2erpnext/invoice2erpnext/doctype/invoice2erpnext_log/: invoice2erpnext_log.json  invoice2erpnext_log.py
invoice2erpnext/invoice2erpnext/doctype/invoice2erpnext_settings/: invoice2erpnext_settings.js  invoice2erpnext_settings.json  invoice2erpnext_settings.py
invoice2erpnext/public/js/: purchase_invoice_list.js
server/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
server/scripts/: test-upload.ts
server/src/: config.ts  index.ts
server/src/middleware/: auth.ts
server/src/prompts/: invoice-extraction.ts
server/src/providers/: anthropic.ts  fireworks.ts  ollama.ts
server/src/routes/: categorize.ts  credits.ts  health.ts  upload.ts
server/src/services/: aiExtractor.ts  fileProcessor.ts  responseFormatter.ts
server/src/types/: index.ts
